--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body style="background-color:turquoise;">
-    <h1 style="padding-top: 20%; padding-bottom: 20%; text-align: center; color:brown;">Test de Git et GitHub</h1>
+    <h1 style="padding-top: 20%; padding-bottom: 20%; text-align: center; color:thistle;">Test de Git et GitHub</h1>
 </body>
 </html>
