--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body style="background-color:turquoise;">
+<body style="background-color:lightslategrey;">
     <h1 style="padding-top: 20%; padding-bottom: 20%; text-align: center; color:thistle;">Test de Git et GitHub</h1>
 </body>
 </html>
